Use Thread SDK APIs instead of reflection
Bug: 328038364
Test: manual end-to-end test on Gambit
Flag: NONE not needed
Change-Id: I54617c2f9b21900edc51a0778fbb153d877ae800